namespace Codering
{
    public interface ICodeerbareString
    {
        string GecodeerdeString(string codeString);
    }
}