namespace Codering.UML
{
    public class PlainText : ICodeerbareString
    {
        public PlainText()
        {
        }

        public string GecodeerdeString(string codeString)
        {
            return codeString;
        }
    }
}